Got rid of the overflow bug

--- a/scss/modules/_heroUnit.scss
+++ b/scss/modules/_heroUnit.scss
@@ -9,6 +9,10 @@
 
   color: $white;
   text-decoration: none;
+
+  &.no-overflow {
+    overflow: hidden;
+  }
 }
 
 .hero-unit-container {
@@ -19,10 +23,6 @@
 
   width: 100%;
   height: 100%;
-}
-
-.hero-unit-no-overflow {
-  overflow: hidden;
 }
 
 .hero-unit-bit {
