--- a/scss/modules/_liquidColumns.scss
+++ b/scss/modules/_liquidColumns.scss
@@ -25,7 +25,7 @@
   padding: 0 25px 0 50px;
 
   position: relative;
-  width: 100%;
+  width: calc(100% - 75px);
   height: (100px * $factor);
 
   display: flex;
@@ -34,5 +34,9 @@
 
   &.restricted-width {
     max-width: $maxUnitBitWidth;
+  }
+
+  &.no-overflow {
+    overflow: hidden;
   }
 }
